# plus_agent

./: .env.example  README.md  __init__.py  app.py  app2.py  apply_conversion.py  apply_tool_improvements.py  batch_convert_tools.py  benchmark_singleagent2.py  benchmark_smolagents.py  check_deps.py  comprehensive_titanic_statistics.py  convert_tools_to_memory.py  enhanced_titanic_tester.py  filtered_first_class_females.csv  filtered_titanic.csv  fix_updates.py  improve_tools_script.py  improved_tools.py  langsmith_comparison_test.py  main.py  ml_unified_tools.py  passenger_distribution.csv  predict_survival_tool.py  pyproject.toml  quick_universal_demo.py  requirements.txt  save_tool.py  simple_convert.py  simple_universal_agent.py  simple_universal_agent_langsmith.py  smolagents_multiagent_system.py  smolagents_multiagent_system.py.backup_before_todos  smolagents_singleagent.py  smolagents_singleagent.py.backup  smolagents_singleagent2.py  smolagents_singleagent_improved.py  smolagents_tools.py  smolagents_tools.py.backup_batch_20251016_123738  smolagents_tools.py.backup_dataframe_conversion  (+25 more)
agents/: __init__.py  data_manipulation_agent.py  data_operations_agent.py  data_reader_agent.py  ml_prediction_agent.py  planner_agent.py  planner_agent_improved.py
bash/: README.md  run_benchmark_both.sh  run_benchmark_multi.sh  run_benchmark_single.sh  test_data_tools.slurm  test_full_system.slurm  test_gradio_interface.slurm  test_llm_wrapper.slurm  test_manipulation_tools.slurm  test_ml_tools.slurm  test_operations_tools.slurm  test_orchestrator.slurm  test_single_agents.slurm  (+2 more)
(+22 files in other folders)
