[project]
name = "plus-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "gradio>=5.46.1",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langgraph>=0.6.7",
    "langsmith>=0.4.29",
    "pandas>=2.3.2",
    "psutil>=7.1.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
